minor changes like radio btns , checkbox, add to cart btn , collapse(needs fixing)

--- a/client/src/components/customization/customizationbox.css
+++ b/client/src/components/customization/customizationbox.css
@@ -77,6 +77,93 @@
     margin-right: 1rem;
 }
 
+.customSelect {
+    margin-right: 1rem;
+}
+
+input[type="radio"]:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #d1d3d1;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+
+input[type="radio"]:checked:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #ffa500;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+
+input[type="checkbox"]:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -3px;
+    left: -2px;
+    position: relative;
+    background-color: #d1d3d1;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+
+input[type="checkbox"]:checked:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -3px;
+    left: -2px;
+    position: relative;
+    background-color: #ffa500;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+
 .hidden {
     display: none;
+}
+
+.addtocart-btn {
+    margin: 10px;
+    height: 3rem;
+    width: 15rem;
+    border-radius: 10px;
+    background: white;
+    box-shadow: 2px 2px 2px black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.btn-descrip {
+    margin-left: 1rem;
+}
+.cart-icon {
+    margin-right: 1rem;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background-color: #ffa500;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
